--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -8,6 +8,13 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
 
+    env:
+      TF_VAR_private_key: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
+      TF_VAR_account: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+      TF_VAR_user: ${{ secrets.SNOWFLAKE_USER }}
+      TF_VAR_role: ${{ secrets.SNOWFLAKE_ROLE }}
+      TF_VAR_region: ${{ secrets.SNOWFLAKE_REGION }}
+
     steps:
       - uses: actions/checkout@v4
 
